Added portfolio projects

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 			<section class="overview-section p-3 p-lg-5">
 				<div class="container">
 					<h2 class="section-title font-weight-bold mb-3">What I do</h2>
-					<div class="section-intro mb-5">I have more than 10 years' experience building software for clients all over
+					<div class="section-intro mb-5">I have more than 2 years' experience building software for clients all over
 						the world. Below is a quick overview of my main technical skill sets and technologies I use. Want to find
 						out more about my experience? Check out my <a href="resume.html">online resume</a> and <a
 							href="portfolio.html">project portfolio</a>.</div>
@@ -228,7 +228,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 							<div class="item-inner">
 								<div class="item-icon"><i class="fab fa-npm mr-2"></i><i class="fab fa-gulp mr-2"></i><i
 										class="fab fa-grunt"></i></div>
-								<h3 class="item-title">npm, Gulp &amp; Grunt</h3>
+								<h3 class="item-title">npm, Gulp &amp; Webpack</h3>
 								<div class="item-desc">List skills/technologies here. You can change the icon above to any of the 1500+
 									<a class="theme-link" href="https://fontawesome.com/" target="_blank">FontAwesome 5 free icons</a>
 									available. Aenean commodo ligula eget dolor. </div>
@@ -423,11 +423,10 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">HMS Vuejs Online CV Resume</a>
+											<h5 class="card-title"><a href="project.html" class="theme-link"> Vuejs Online CV</a>
 											</h5>
-											<p class="card-text">The most complete & A Nice Boilerplate Template for creating your online
-												resume or cv in Vue.js, Its a boilerplate for production-ready PWAs. With focus on performance,
-												development speed, and best practices.</p>
+											<p class="card-text">The most complete & A Nice Boilerplate Template for creating your online cv
+												in Vue.js, Its a boilerplate for production-ready PWAs.</p>
 											<p class="card-text"><small class="text-muted">Client: Google</small></p>
 										</div>
 									</div>
@@ -438,6 +437,9 @@ I am having the expertise and high bug solving skills and could easily get on bo
 										<a target="_blank" class="btn btn-secondary"
 											href="https://ayoubkhan-projects.github.io/hms-vuejs-online-cv-resume">
 											<i class="fas fa-eye mr-2"></i>View Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
 										</a>
 									</div>
 								</div>
@@ -455,8 +457,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<div class="col-lg-8">
 										<div class="card-body">
 											<h5 class="card-title"><a href="project.html" class="theme-link">Free-Ela</a></h5>
-											<p class="card-text">Free-ela is a Micro Job Marketplace site where you can sell or buy service at
-												a incredible price.
+											<p class="card-text">Free-ela is a Micro Job Marketplace site..
 												I have worked with HTML5, CSS3, Scss, Javascript, QJuery and forms on this project.</p>
 											<p class="card-text"><small class="text-muted">Client: Hafiz Aqib</small></p>
 										</div>
@@ -466,7 +467,10 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
 										<a target="_blank" class="btn btn-secondary" href="https://free-ela.netlify.com/">
-											<i class="fas fa-eye mr-2"></i>View Detail
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
 										</a>
 									</div>
 								</div>
@@ -483,9 +487,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Project Heading</a></h5>
-											<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque
-												penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+											<h5 class="card-title"><a href="project.html" class="theme-link">Edutainment</a></h5>
+											<p class="card-text">Edutainment - An Educational Entertainment Company... </p>
 											<p class="card-text"><small class="text-muted">Client: Google</small></p>
 										</div>
 									</div>
@@ -493,8 +496,11 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a target="_blank" class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Detail
+										<a target="_blank" class="btn btn-secondary" href="http://edutainment.com.pk/">
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
 										</a>
 									</div>
 								</div>
@@ -522,7 +528,10 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
 										<a target="_blank" class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Detail
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
 										</a>
 									</div>
 								</div>
