--- a/portfolio.html
+++ b/portfolio.html
@@ -124,8 +124,10 @@ I am having the expertise and high bug solving skills and could easily get on bo
 				<div class="container text-center single-col-max-width">
 					<h2 class="heading">Portfolio</h2>
 					<div class="intro">
-						<p>Welcome to my online portfolio. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-							ligula eget dolor. I'm taking on freelance work at the moment. Want some help building your software?</p>
+						<p>Welcome to my online portfolio.
+							I have more than 2 years' experience building websites. Below are listed
+							some of the projects. I'm taking on freelance work at the moment.
+							Want some help building your web app?</p>
 
 					</div>
 					<a class="btn btn-primary" href="contact.html" target="_blank"><i class="fas fa-paper-plane mr-2"></i>Hire
@@ -140,26 +142,26 @@ I am having the expertise and high bug solving skills and could easily get on bo
 					<div class="text-center">
 						<ul id="filters" class="filters mb-5 mx-auto pl-0">
 							<li class="type active mb-3 mb-lg-0" data-filter="*">All</li>
-							<li class="type  mb-3 mb-lg-0" data-filter=".webapp">We App</li>
-							<li class="type  mb-3 mb-lg-0" data-filter=".mobileapp">Mobile App</li>
+							<li class="type  mb-3 mb-lg-0" data-filter=".webapp">Web</li>
+							<li class="type  mb-3 mb-lg-0" data-filter=".mobileapp">Mobile</li>
 							<li class="type  mb-3 mb-lg-0" data-filter=".frontend">Frontend</li>
 							<li class="type  mb-3 mb-lg-0" data-filter=".backend">Backend</li>
+							<li class="type  mb-3 mb-lg-0" data-filter=".opensource">Open Source</li>
 						</ul>
 						<!--//filters-->
 					</div>
 
 					<div class="project-cards row isotope">
-						<div class="isotope-item col-md-6 mb-5 mobileapp frontend">
+						<div class="isotope-item col-md-6 mb-5 webapp frontend">
 							<div class="card project-card">
 								<div class="row no-gutters">
 									<div class="col-lg-4 card-img-holder">
-										<img src="./assets/images/project/project-1.jpg" class="card-img" alt="image">
+										<img src="./assets/images/project/project-2.jpg" class="card-img" alt="image">
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
 											<h5 class="card-title"><a href="project.html" class="theme-link">Free-Ela</a></h5>
-											<p class="card-text">Free-ela is a Micro Job Marketplace site where you can sell or buy service at
-												a incredible price.
+											<p class="card-text">Free-ela is a Micro Job Marketplace site..
 												I have worked with HTML5, CSS3, Scss, Javascript, QJuery and forms on this project.</p>
 											<p class="card-text"><small class="text-muted">Client: Hafiz Aqib</small></p>
 										</div>
@@ -169,7 +171,42 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
 										<a target="_blank" class="btn btn-secondary" href="https://free-ela.netlify.com/">
-											<i class="fas fa-eye mr-2"></i>View Detail
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
+										</a>
+									</div>
+								</div>
+								<!--//link-mask-->
+							</div>
+							<!--//card-->
+						</div>
+						<!--//col-->
+						<div class="isotope-item col-md-6 mb-5 webapp frontend opensource">
+							<div class="card project-card">
+								<div class="row no-gutters">
+									<div class="col-lg-4 card-img-holder">
+										<img src="./assets/images/project/project-1.jpg" class="card-img" alt="image">
+									</div>
+									<div class="col-lg-8">
+										<div class="card-body">
+											<h5 class="card-title"><a href="project.html" class="theme-link">Vuejs Online CV Resume</a>
+											</h5>
+											<p class="card-text">The most complete & A Nice Boilerplate Template for creating your online cv
+												in Vue.js, Its a boilerplate for production-ready PWAs.</p>
+											<p class="card-text"><small class="text-muted">Client: Dropbox</small></p>
+										</div>
+									</div>
+								</div>
+								<div class="link-mask">
+									<a class="link-mask-link" href="project.html"></a>
+									<div class="link-mask-text">
+										<a target="_blank" class="btn btn-secondary" href="project.html">
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
 										</a>
 									</div>
 								</div>
@@ -182,41 +219,12 @@ I am having the expertise and high bug solving skills and could easily get on bo
 							<div class="card project-card">
 								<div class="row no-gutters">
 									<div class="col-lg-4 card-img-holder">
-										<img src="./assets/images/project/project-2.jpg" class="card-img" alt="image">
-									</div>
-									<div class="col-lg-8">
-										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Project Heading</a></h5>
-											<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque
-												penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-											<p class="card-text"><small class="text-muted">Client: Dropbox</small></p>
-										</div>
-									</div>
-								</div>
-								<div class="link-mask">
-									<a class="link-mask-link" href="project.html"></a>
-									<div class="link-mask-text">
-										<a target="_blank" class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Detail
-										</a>
-									</div>
-								</div>
-								<!--//link-mask-->
-							</div>
-							<!--//card-->
-						</div>
-						<!--//col-->
-						<div class="isotope-item col-md-6 mb-5 mobileapp">
-							<div class="card project-card">
-								<div class="row no-gutters">
-									<div class="col-lg-4 card-img-holder">
 										<img src="./assets/images/project/project-3.jpg" class="card-img" alt="image">
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Project Heading</a></h5>
-											<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque
-												penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+											<h5 class="card-title"><a href="project.html" class="theme-link">Edutainment</a></h5>
+											<p class="card-text">Edutainment - An Educational Entertainment Company</p>
 											<p class="card-text"><small class="text-muted">Client: Google</small></p>
 										</div>
 									</div>
@@ -224,8 +232,11 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a target="_blank" class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Detail
+										<a target="_blank" class="btn btn-secondary" href="http://edutainment.com.pk/">
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
 										</a>
 									</div>
 								</div>
@@ -234,7 +245,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 							<!--//card-->
 						</div>
 						<!--//col-->
-						<div class="isotope-item col-md-6 mb-5 webapp backend">
+						<div class="isotope-item col-md-6 mb-5 webapp frontend">
 							<div class="card project-card">
 								<div class="row no-gutters">
 									<div class="col-lg-4 card-img-holder">
@@ -253,7 +264,10 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
 										<a target="_blank" class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Detail
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
 										</a>
 									</div>
 								</div>
@@ -281,7 +295,10 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
 										<a target="_blank" class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Detail
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
 										</a>
 									</div>
 								</div>
@@ -309,7 +326,10 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
 										<a target="_blank" class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Detail
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
 										</a>
 									</div>
 								</div>
@@ -337,7 +357,10 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
 										<a target="_blank" class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Detail
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
 										</a>
 									</div>
 								</div>
@@ -365,7 +388,10 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
 										<a target="_blank" class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Detail
+											<i class="fas fa-eye mr-2"></i> Live
+										</a>
+										<a target="_blank" class="btn btn-primary" href="project.html">
+											<i class="fas fa-info-circle mr-2"></i> Detail
 										</a>
 									</div>
 								</div>
