--- a/contact.html
+++ b/contact.html
@@ -9,16 +9,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description"
-			content="Hi, Em Muhammad Ayoub self-learned programmer from Faisalabad. I'm a professional web developer specialised in frontend development for complex scalable web apps.
-I am having the expertise and high bug solving skills and could easily get on board with an ongoing project. I have experience in web development languages and frameworks.">
+			content="Hi, Em Muhammad Ayoub self-learned programmer from Faisalabad. I'm a professional web developer specialised in frontend development for complex scalable web apps.">
 		<meta name="author" content="Muhammad Ayoub Khan">
 		<link rel="shortcut icon" href="./favicon.ico">
 
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-
-		<!-- FontAwesome JS -->
-		<script defer src="./assets/fontawesome/js/all.js"></script>
 
 		<!-- Owl Stylesheets -->
 		<link rel="stylesheet" href="./assets/plugins/owlcarousel/owl.carousel.min.css">
@@ -158,7 +154,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 			</section>
 			<section class="contact-section px-3 py-5 p-md-5">
 				<div class="container">
-					<form id="contact-form" class="contact-form col-lg-8 mx-lg-auto" method="post" action="#">
+					<form id="contact-form" class="contact-form col-lg-8 mx-lg-auto" method="post" action="#" name="contact_form" data-netlify="true">
 						<h3 class="text-center mb-3">Get In Touch</h3>
 						<div class="form-row">
 							<div class="form-group col-md-6">
@@ -217,6 +213,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 
 
 		<!-- Javascript -->
+		<script defer src="./assets/fontawesome/js/all.js"></script>
 		<script src="./assets/plugins/jquery-3.4.1.min.js"></script>
 		<script src="./assets/plugins/popper.min.js"></script>
 		<script src="./assets/plugins/bootstrap/js/bootstrap.min.js"></script>
