--- a/blog-post.html
+++ b/blog-post.html
@@ -9,16 +9,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description"
-			content="Hi, Em Muhammad Ayoub self-learned programmer from Faisalabad. I'm a professional web developer specialised in frontend development for complex scalable web apps.
-I am having the expertise and high bug solving skills and could easily get on board with an ongoing project. I have experience in web development languages and frameworks.">
+			content="Hi, Em Muhammad Ayoub self-learned programmer from Faisalabad. I'm a professional web developer specialised in frontend development for complex scalable web apps.">
 		<meta name="author" content="Muhammad Ayoub Khan">
 		<link rel="shortcut icon" href="./favicon.ico">
 
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-
-		<!-- FontAwesome JS -->
-		<script defer src="./assets/fontawesome/js/all.js"></script>
 
 		<!-- Owl Stylesheets -->
 		<link rel="stylesheet" href="./assets/plugins/owlcarousel/owl.carousel.min.css">
@@ -329,6 +325,7 @@ export  $initHighlight;
 
 
 		<!-- Javascript -->
+		<script defer src="./assets/fontawesome/js/all.js"></script>
 		<script src="./assets/plugins/jquery-3.4.1.min.js"></script>
 		<script src="./assets/plugins/popper.min.js"></script>
 		<script src="./assets/plugins/bootstrap/js/bootstrap.min.js"></script>
