--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
 			</section>
 			<section class="contact-section px-3 py-5 p-md-5">
 				<div class="container">
-					<form id="contact-form" class="contact-form col-lg-8 mx-lg-auto" method="post" action="#" name="contact_form" data-netlify="true">
+					<form id="contact-form" class="contact-form col-lg-8 mx-lg-auto" method="post" action="#" name="contact_form" data-netlify="true" netlify>
 						<h3 class="text-center mb-3">Get In Touch</h3>
 						<div class="form-row">
 							<div class="form-group col-md-6">
