ADDED Confirmation code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-
+		<meta name="code" content="7b89bc23dcb0f917ef2e51d18eae8bc5eff7a61f">
 		<!-- Owl Stylesheets -->
 		<link rel="stylesheet" href="./assets/plugins/owlcarousel/owl.carousel.min.css">
 		<!-- Theme CSS -->
