--- a/index.html
+++ b/index.html
@@ -269,6 +269,68 @@
 				<hr>
 			</div>
 
+			<section class="overview-section p-3 p-lg-5">
+				<div class="container">
+					<h2 class="section-title font-weight-bold mb-3">Licenses & Certifications</h2>
+					<div class="section-intro mb-5">I have got more than 3 Licenses & Certifications.</div>
+					<div class="row">
+						<div class="col-12 col-lg-12">
+							<div class="list-group">
+								<div class="list list-group-item">
+									<div class="img-wrapper"><img src="assets/images/courses_cert/img2.jpg" width="80"
+											class="mr-3 img-fluid" alt="How to Register a Domain, Setup Up Hosting, and Edit Web Pages "></div>
+									<div class="content">
+										<h6 class="mb-1">How to Register a Domain, Setup Up Hosting, and Edit Web Pages </h6>
+										<div class="d-flex justify-content-between">
+											<small class="text-muted">Completed on: 05/27/2018</small>
+											<!-- <small class="text-muted">Expires on: No expiry</small> -->
+										</div>
+									</div>
+									<a href="http://ude.my/UC-JXXS3YBV" class="link btn btn-primary btn-sm"><span class="fa fa-link"></span></a>
+								</div>
+								<div class="list list-group-item">
+									<div class="img-wrapper"><img src="assets/images/courses_cert/img3.jpg" width="80"
+											class="mr-3 img-fluid" alt="Write quicker HTML5 and CSS 3; productivity hacks with emmet"></div>
+									<div class="content">
+										<h6 class="mb-1">Write quicker HTML5 and CSS 3; productivity hacks with emmet</h6>
+										<div class="d-flex justify-content-between">
+											<small class="text-muted">Completed on: 10/22/2019</small>
+											<!-- <small class="text-muted">Expires on: No expiry</small> -->
+										</div>
+									</div>
+									<a href="" class="link btn btn-primary btn-sm"><span class="fa fa-link"></span></a>
+								</div>
+								<div class="list list-group-item">
+									<div class="img-wrapper"><img src="assets/images/courses_cert/img3.jpg" width="80"
+											class="mr-3 img-fluid" alt="Pre-Flutter & Dart Everything To Know Before You Start"></div>
+									<div class="content">
+										<h6 class="mb-1">Pre-Flutter & Dart: Everything To Know Before You Start!</h6>
+										<div class="d-flex justify-content-between">
+											<small class="text-muted">Completed on: 02/28/2020</small>
+											<!-- <small class="text-muted">Expires on: No expiry</small> -->
+										</div>
+									</div>
+									<a href="" class="link btn btn-primary btn-sm"><span class="fa fa-link"></span></a>
+								</div>
+							</div>
+							<!--//item-inner-->
+						</div>
+					</div>
+					<!--//row-->
+					<div class="text-center py-3">
+						<a href="services.html" class="btn btn-primary">
+							<i class="fas fa-arrow-alt-circle-right mr-2"></i>Services
+							&amp; Pricing
+						</a>
+					</div>
+				</div>
+				<!--//container-->
+			</section>
+
+			<div class="container">
+				<hr>
+			</div>
+
 			<section class="testimonials-section p-3 p-lg-5">
 				<div class="container">
 					<h2 class="section-title font-weight-bold mb-5">Testimonials</h2>
