--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
 								project.
 
 								I have experience in web development <i>languages</i> and <i>frameworks</i>.
-								<br> <br> Want to know how I may help your project? Check out my project <a class="link-on-bg"
-									href="projects.html">portfolio</a> and <a class="link-on-bg" href="resume.html">online
+								<br> <br> Want to know how I may help your project? Check out my project
+								<a class="link-on-bg" href="projects.html">portfolio</a> and <a class="link-on-bg"
+									href="resume.html">online
 								</a>.
 							</div>
 							<!--//bio-->
@@ -290,7 +291,8 @@
 								</div>
 								<div class="list list-group-item">
 									<div class="img-wrapper"><img src="assets/images/courses_cert/img2-min.jpg" width="80"
-											class="mr-3 img-fluid" alt="How to Register a Domain, Setup Up Hosting, and Edit Web Pages "></div>
+											class="mr-3 img-fluid" alt="How to Register a Domain, Setup Up Hosting, and Edit Web Pages ">
+									</div>
 									<div class="content">
 										<h6 class="mb-1">How to Register a Domain, Setup Up Hosting, and Edit Web Pages </h6>
 										<div class="d-flex justify-content-between">
@@ -298,7 +300,8 @@
 											<!-- <small class="text-muted">Expires on: No expiry</small> -->
 										</div>
 									</div>
-									<a href="http://ude.my/UC-JXXS3YBV" class="link btn btn-primary btn-sm"><span class="fa fa-link"></span></a>
+									<a href="http://ude.my/UC-JXXS3YBV" class="link btn btn-primary btn-sm"><span
+											class="fa fa-link"></span></a>
 								</div>
 								<div class="list list-group-item">
 									<div class="img-wrapper"><img src="assets/images/courses_cert/img3-min.jpg" width="80"
