Added testimonial & project on home page
Added one testimonial for Haseeb Raza & 1 featured project on home page

--- a/index.html
+++ b/index.html
@@ -379,6 +379,28 @@
 						<div class="item">
 							<div class="quote-holder">
 								<blockquote class="quote-content">
+									Very nice and modern website, responsive and smart vendor,
+									Fantastic experience. Ayoub built a sharp and informative website.
+									It exceeded my expectations.
+									Very satisfied with the work.
+								</blockquote>
+								<i class="fas fa-quote-left"></i>
+							</div>
+							<!--//quote-holder-->
+							<div class="source-holder">
+								<div class="source-profile">
+									<img src="./assets/images/clients/profile-6.png" alt="image" />
+								</div>
+								<div class="meta">
+									<div class="name">Haseeb Raza</div>
+									<div class="info">Local Client</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="item">
+							<div class="quote-holder">
+								<blockquote class="quote-content">
 									fast responsive, deliver on time.
 								</blockquote>
 								<i class="fas fa-quote-left"></i>
@@ -391,66 +413,6 @@
 								<div class="meta">
 									<div class="name">idan_ash</div>
 									<div class="info">Buyer, Fiver</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="item">
-							<div class="quote-holder">
-								<blockquote class="quote-content">
-									Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-									Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
-								</blockquote>
-								<i class="fas fa-quote-left"></i>
-							</div>
-							<!--//quote-holder-->
-							<div class="source-holder">
-								<div class="source-profile">
-									<img src="./assets/images/clients/profile-4.png" alt="image" />
-								</div>
-								<div class="meta">
-									<div class="name">James Lee</div>
-									<div class="info">Product Manager, Amazon</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="item">
-							<div class="quote-holder">
-								<blockquote class="quote-content">
-									Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-									Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
-								</blockquote>
-								<i class="fas fa-quote-left"></i>
-							</div>
-							<!--//quote-holder-->
-							<div class="source-holder">
-								<div class="source-profile">
-									<img src="./assets/images/clients/profile-5.png" alt="image" />
-								</div>
-								<div class="meta">
-									<div class="name">Olivia White</div>
-									<div class="info">Product Manager, Dropbox</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="item">
-							<div class="quote-holder">
-								<blockquote class="quote-content">
-									Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-									Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
-								</blockquote>
-								<i class="fas fa-quote-left"></i>
-							</div>
-							<!--//quote-holder-->
-							<div class="source-holder">
-								<div class="source-profile">
-									<img src="./assets/images/clients/profile-6.png" alt="image" />
-								</div>
-								<div class="meta">
-									<div class="name">Samuel Reyes</div>
-									<div class="info">CTO, StartupHub</div>
 								</div>
 							</div>
 						</div>
@@ -568,26 +530,28 @@
 							<div class="card project-card">
 								<div class="row no-gutters">
 									<div class="col-lg-4 card-img-holder">
-										<img src="./assets/images/project/project-4.jpg" class="card-img" alt="image">
+										<img src="./assets/images/project/project-8.png" class="card-img" alt="image">
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Project Heading</a></h5>
-											<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque
-												penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-											<p class="card-text"><small class="text-muted">Client: Uber</small></p>
+											<h5 class="card-title"><a href="project.html" class="theme-link">SodaSulf Grocery Store App</a>
+											</h5>
+											<p class="card-text">Soda Sulf : A complete Online Grocery Store in Sahiwal.
+												SodaSulfs is a android app. Its a Hybrid Mobile App created this app with Ionic 4 and Angular 7
+												and Sass.</p>
+											<p class="card-text"><small class="text-muted">AWSOL</small></p>
 										</div>
 									</div>
 								</div>
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a target="_blank" class="btn btn-secondary" href="project.html">
+										<!-- <a target="_blank" class="btn btn-secondary" href="http://edutainment.com.pk/">
 											<i class="fas fa-eye mr-2"></i> Live
-										</a>
-										<a target="_blank" class="btn btn-primary" href="project.html">
+										</a> -->
+										<!-- <a target="_blank" class="btn btn-primary" href="project.html">
 											<i class="fas fa-info-circle mr-2"></i> Detail
-										</a>
+										</a> -->
 									</div>
 								</div>
 								<!--//link-mask-->
@@ -617,15 +581,20 @@
 							<div class="card blog-post-card">
 								<img class="card-img-top" src="./assets/images/blog/blog-post-thumb-card-1.jpg" alt="image">
 								<div class="card-body">
-									<h5 class="card-title"><a class="theme-link" href="blog-post.html">Top 3 JavaScript Frameworks</a>
+									<h5 class="card-title"><a class="theme-link" target="_blank"
+											href="https://medium.com/@ayoubkhan558/firebase-authentication-in-vue-js-2-with-vuefire-d316efbeddaa">Firebase
+											Authentication in Vue.js 2 with VueFire</a>
 									</h5>
-									<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-										eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient...</p>
-									<p class="mb-0"><a class="more-link" href="blog-post.html">Read more &rarr;</a></p>
+									<p class="card-text">Firebase provides a very simple way to setup authentication in your apps.
+										Here we’ll explore how to setup a simple authentication workflow for VueJS 2+ apps using the Vuefire
+										library....</p>
+									<p class="mb-0"><a class="more-link" target="_blank"
+											href="https://medium.com/@ayoubkhan558/firebase-authentication-in-vue-js-2-with-vuefire-d316efbeddaa">Read
+											more &rarr;</a></p>
 
 								</div>
 								<div class="card-footer">
-									<small class="text-muted">Published 2 days ago</small>
+									<small class="text-muted">Published 4 months ago</small>
 								</div>
 							</div>
 							<!--//card-->
